[package]
name = "lsk"
version = "0.1.0"
authors = ["7db9a"]
edition = "2018"
license = "MIT"
description="Imagine ls, but you can 'key' into the file or dir instead of just starring at it."
homepage = "https://github.com/7db9a/lsk"
repository = "https://github.com/7db9a/lsk"
readme = "README.md"
keywords = ["file", "ls", "cli", "terminal"]

[[bin]]
name = "lsk"
path = "src/bin/main.rs"
doc = false

[lib]
name = "ls_key"
path = "src/mod.rs"

[dependencies]
seahorse = "~0.7.1"
walkdir = "~2.3.1"
term_grid = "~0.1.7"
termion = "~1.5.5"
cmd_lib = "~0.7.8"
fuzzy-matcher = "~0.3.4"
xdotool = "~0.0.2"
sha2 = "~0.8.2"
easy-hasher = "~2.1.1"
ansi_term = "~0.12.0"
